Dynegy/src/objects/DASR_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Id__c</fullName>
        <formula>LDC_Account_Reference__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DASR_Submit_Date__c</fullName>
        <label>DASR Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DASR_Type__c</fullName>
        <label>DASR Type</label>
        <picklist>
            <picklistValues>
                <fullName>GASC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GASH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GASR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dynergy_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dynegy Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LDC_Account_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDC Account Reference</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipName>DASR_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meter_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meter Reference</label>
        <referenceTo>Meter__c</referenceTo>
        <relationshipLabel>DASR Summary</relationshipLabel>
        <relationshipName>DASR_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originator_DUNS__c</fullName>
        <formula>LDC_Account_Reference__r.Account__r.Supplier__r.Supplier_DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originator_DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Name__c</fullName>
        <formula>LDC_Account_Reference__r.Account__r.Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originator_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_DUNS__c</fullName>
        <formula>LDC_Account_Reference__r.LDC_Vendor__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient_DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <formula>LDC_Account_Reference__r.LDC_Vendor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Date__c</fullName>
        <label>Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting For Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_ID__c</fullName>
        <formula>LDC_Account_Reference__r.Account__r.Supplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TO_EDI_Status__c</fullName>
        <label>TO EDI Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Salesforce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <formula>LDC_Account_Reference__r.LDC_Vendor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Id</label>
        <type>Text</type>
    </fields>
    <label>DASR Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LDC_Account_Reference__c</columns>
        <columns>Meter_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Send_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DSR-{0000000}</displayFormat>
        <label>DASR Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DASR Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>